# fuck

./: Cargo.toml  README.md
src/: lib.rs
src/utils/: linked_list.rs
