[package]
name = "fuck"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fuck or be fucked"
homepage = "https://github.com/chenyuanrun/fuck.git"
repository = "https://github.com/chenyuanrun/fuck.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
